# cwinput

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cwinput/: __init__.py  __main__.py  binds.py  main.py
lib/: winput.py
winput/: __init__.py  __main__.py
