[project]
name = "winput"
version = 0.1
description = "Listen to raw console input"
readme = "README.md"
authors = { name = "Zhilkaidarov Damir", email = "rustam030201@gmail.com" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["setuptools"]

[project.urls]
Homepage = "https://github.com/mitaraaa/winput"